# tetris

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
game/: game.h  logic.c  logic.h  main.c  render.c  render.h
glfw-3.1.2/: CMakeCache.txt  Makefile  cmake_install.cmake  cmake_uninstall.cmake
glfw-3.1.2/docs/: Doxyfile
glfw-3.1.2/examples/: Makefile  cmake_install.cmake
glfw-3.1.2/src/: Makefile  cmake_install.cmake
glfw-3.1.2/tests/: Makefile  cmake_install.cmake
